# flat-2020-practice2

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  main_test.cpp
include/: EarleyParser.h  Grammar.h  GrammarRule.h
src/: EarleyParser.cpp  Grammar.cpp  GrammarRule.cpp
